Closed
Bug 329634
Opened 19 years ago
Closed 19 years ago
No apparent way to Reload Live Bookmark (or update livemarks)
Categories
(Firefox :: Bookmarks & History, defect, P2)
Firefox
Bookmarks & History
Tracking
()
VERIFIED
FIXED
Firefox 2 alpha2
People
(Reporter: tracy, Assigned: pamg.bugs)
References
Details
(Keywords: fixed1.8.1, regression, Whiteboard: swag:0.5 days)
Attachments
(3 files)
|
15.90 KB,
patch
|
annie.sullivan
:
review+
bugs
:
superreview+
|
Details | Diff | Splinter Review |
|
15.58 KB,
patch
|
Details | Diff | Splinter Review | |
|
2.25 KB,
patch
|
darin.moz
:
review+
|
Details | Diff | Splinter Review |
Seen on Firefox trunk builds from 2006-03-07
-Context click on a Live Bookmark (in BTB or Places)
Tested results:
no option to Reload Live Bookmark is present.
I also don't see any other apparent way to reload a feed
Expected result:
Live Bookmark context click menu should present "Reload Live Bookmark' just above "Sort By Name"
Updated•19 years ago
|
Component: Bookmarks → Places
QA Contact: bookmarks → places
Comment 1•19 years ago
|
||
Reality check. Not a smoketest blocker. Downgrading to "major".
Severity: blocker → major
| Reporter | ||
Comment 2•19 years ago
|
||
Ian, are you saying that feed reload shouldn't be a smoketest?
Comment 3•19 years ago
|
||
Maybe once we're not rebuilding the system from the ground up ;-)
We know about this and will fix it, but it's on the a2 radar.
Assignee: nobody → annie.sullivan
Priority: -- → P2
Target Milestone: --- → Firefox 2 alpha2
| Reporter | ||
Comment 4•19 years ago
|
||
ben, yeah, I'll back off on hammering at Places until it grows beyond sappling.
Keywords: smoketest
Comment 5•19 years ago
|
||
*** Bug 331358 has been marked as a duplicate of this bug. ***
Comment 6•19 years ago
|
||
(Adding some keywords to the title for better searchability, since I didn't find it before adding a dup.)
Summary: No apparent way to Reload Live Bookmark → No apparent way to Reload Live Bookmark (or update livemarks)
Updated•19 years ago
|
Whiteboard: swag:0.5 days
| Assignee | ||
Comment 7•19 years ago
|
||
"Reload" is now present, but disabled. Working on a fix and implementation.
| Assignee | ||
Updated•19 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Updated•19 years ago
|
Assignee: annie.sullivan → pamg.bugs
Status: ASSIGNED → NEW
| Assignee | ||
Comment 8•19 years ago
|
||
- Reorganized function to enable livemark reload menu item
- Pulled nodeIsLivemarkContainer out into its own function for general use
- Implemented livemark reloading menus
Attachment #216657 -
Flags: superreview?(bugs)
Attachment #216657 -
Flags: review?(annie.sullivan)
Updated•19 years ago
|
Attachment #216657 -
Flags: review?(annie.sullivan) → review+
Comment 9•19 years ago
|
||
Comment on attachment 216657 [details] [diff] [review]
Implements livemark reloading and enables command properly
sr=ben@mozilla.org
Attachment #216657 -
Flags: superreview?(bugs) → superreview+
Comment 10•19 years ago
|
||
fixed-on-trunk, fixed1.8.1
Comment 11•19 years ago
|
||
This is what I checked in. It includes a few additional changes:
* handle merge conflicts in toolbar.xml
* make similar changes in menu.xml (which were not needed previously)
* bump UUID for nsILivemarksService since it has shipped in Bon Echo Alpha 1
| Assignee | ||
Comment 12•19 years ago
|
||
Attachment #217102 -
Flags: review?(darin)
Comment 13•19 years ago
|
||
Comment on attachment 217102 [details] [diff] [review]
FolderIDs should be PRInt64, not PRInt32
r=darin
Attachment #217102 -
Flags: review?(darin) → review+
Comment 14•19 years ago
|
||
attachment 217102 [details] [diff] [review] is now in on the trunk and 1.8 branch.
| Reporter | ||
Comment 15•19 years ago
|
||
verified fixed with recent Bon Echo builds
Status: RESOLVED → VERIFIED
Comment 16•16 years ago
|
||
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".
In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body contains places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.
Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.
Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in
before you can comment on or make changes to this bug.
Description
•