fixes bug 329634 "No apparent way to Reload Live Bookmark (or update livemarks)" patch by pamg, r=annie, sr=beng